temp fix of spacing between nav and photos

--- a/css/listing_header.css
+++ b/css/listing_header.css
@@ -37,7 +37,7 @@
 
 
 #nav-wrapper {
-	height:200px;
+	height:111px;
 
 }
 
